[package]
name = "nanovllm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.9.1", features = ["cuda"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokenizers = "0.22.1"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
candle-nn = { version = "0.9.1", features = ["cuda"] }
hf-hub = "0.4.3"
lazy_static = "1.5.0"
rand = "0.8"
candle-flash-attn = { version = "0.9.1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
